--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,3 +2,26 @@ akka {
   log-dead-letters = 0
   log-dead-letters-during-shutdown = off
 }
+
+gatekeeper {
+
+  version = "0.0.1"
+
+  listen-address = "tcp://127.0.0.1:7001"
+
+
+  twitter {
+    twitter-host = "api.twitter.com"
+    twitter-scheme = "https"
+    twitter-version = "1.1"
+
+    consumer-key = "vkv52UhwI1y0jzmjGJwFBybWU"
+    consumer-secret = "zn4SMeGAEgxsR4vr2TTzP7RpWJgVhpyfl1KuNAqD6WF9l11We4"
+  }
+
+  backends {
+    redis-host = "dev.quine.co"
+    redis-port = 6379
+  }
+
+}
