--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,9 +6,8 @@ akka {
 gatekeeper {
 
   version = "0.0.1"
-
-  listen-address = "tcp://127.0.0.1:7001"
-
+  host = "localhost"
+  port = 7001
 
   twitter {
     twitter-host = "api.twitter.com"
